src/app/app.scss
/* ... */
.link-nau{
    font-style: normal;
    font-weight: bold;
    line-height: normal;
    font-size: 4.2vw;
    text-align: center;
    text-transform: uppercase;
    color: #FF5A00;
}

.title-big-sign{
    font-style: normal;
    font-weight: 300;
    line-height: normal;
    font-size: 8vw;
    color: #3E4B5D;
    font-family: 'OpenSansNauLight';
}

.bg-gray-nau{
    background: #F2F2F2;
}

.bg-white-nau{
    background: #fff;
}

.bg-FF8B10{
    background: #FF8B10;
}

.bg-3E4B5D{
    background: #3E4B5D;
}

.bg-FF5A00{
    background: #FF5A00;
}


button[ion-button] {
    border-radius: 100vw;
    text-transform: uppercase;
}

.popover-ios button[ion-button]{
    font-family: 'OpenSansNauExtrabold';
}

.button-ios-primary {
    background: linear-gradient(180deg, #FF8A0E 0%, #FF5A00 100%);
    font-style: normal;
    font-weight: 800;
    line-height: normal;
    font-size: 16px;
}

.button-ios-secondary {
    background: linear-gradient(180deg, #D9D9D9 0%, #B7B7B7 98.9%);
    font-style: normal;
    font-weight: 800;
    line-height: normal;
    font-size: 16px;
}

.button-circle-small{
    width: 30px;
    height: 30px;
    font-size: 11px;
}

.button-circle-medium{
    width: 40px;
    height: 40px;
    font-size: 11px;
}

.toast-message {
    white-space: pre;
}

.logo {
    width: auto;
    height: 22vw;
    margin: 12vw auto 17vw auto;
    background: url(../assets/img/logo.svg) no-repeat center center;
    background-size: contain;
}

.logo-margin {
    width: auto;
    height: 22vw;
    margin: 27vw auto 17vw auto;
    background: url(../assets/img/logo.svg) no-repeat center center;
    background-size: contain;
}

.header-ios .toolbar-ios:last-child .toolbar-background-ios{
    border-width: 0;
}

ion-header ion-icon.back-button-icon.icon {
    color: map-get($colors, dark);
}

.bold{
    font-weight: bold;
}

.extrabold{
    font-family: 'OpenSansNauExtrabold';
}

.no-bold{
    font-weight: normal;
}

.no-bold.button{
    font-weight: normal;
}

.text-family-light, .regular{
    font-family: 'OpenSansNauLight';
}

.semibold{
    font-family: 'OpenSansNauSemibold';
}

.font-0{
    font-size: 0;
}

.font-10, button.font-10{
    font-size: 10px;
    font-size: 2.5vw;
}

.font-12, button.font-12{
    font-size: 12px;
    font-size: 3vw;
}

.font-14, button.font-14{
    font-size: 14px;
    font-size: 3.7vw;
}

.font-16, button.font-16{
    font-size: 16px;
    font-size: 4.2vw;
}

.font-18, button.font-18{
    font-size: 18px;
    font-size: 4.7vw;
}

.font-20, button.font-20{
    font-size: 20px;
    font-size: 5vw;
    line-height: 6.3vw;
}

.font-22, button.font-22{
    font-size: 22px;
    font-size: 5.7vw;
}

.font-26{
    font-size: 26px;
    font-size: 6.3vw;
}

.font-30{
    font-size: 30px;
    font-size: 7.3vw;
}

.font-36{
    font-size: 36px;
    font-size: 9vw;
    line-height: 9vw;
    padding-bottom: 2vw;
}

.font-40{
    font-size: 40px;
    font-size: 10vw;
    line-height: 12vw;
}

.font-65{
    font-size: 11px;
    font-size: 2.7vw;
}

.font-75{
    font-size: 12px;
    font-size: 3vw;
}

.font-200{
    font-size: 200%;
    font-size: 7vw;
}

// text colors
.text-white {
    color: #fff;
}

.text-gray {
    color: #3E4B5D;
}

.text-3E4B5D{
    color: #3E4B5D;
}

.text-4F4F4F{
    color: #4F4F4F;
}

.text-828282{
    color: #828282;
}

.text-FF8B10{
    color: #FF8B10;
}

.text-BDBDBD{
    color: #BDBDBD;
}

.text-FEC282{
    color: #FEC282;
}

.text-FF5A00{
    color: #FF5A00;
}

.text-333333{
    color: #333333;
}

.text-E0E0E0{
    color: #E0E0E0;
}

ion-app.md [padding], ion-app.md [padding] .padding-no .scroll-content,
ion-app.ios [padding], ion-app.ios [padding] .padding-no .scroll-content{
    padding: 0;
}

.ios ion-nav > .ion-page > ion-content.padding-no.statusbar-padding:first-child .scroll-content{
    padding-top: 0;
}

.border-bottom-no .list-md .item-block .item-inner,
.border-bottom-no.item-md.item-block .item-inner,
.border-bottom-no .list-ios .item-block .item-inner,
.border-bottom-no.item-ios.item-block .item-inner{
    border-bottom: none;
    padding-right: 0;
}

// .select-left .select-md .select-icon,
//.select-left .select-ios .select-icon{
//  right: 17px;
//}

.border-bottom-no .label-md,
.border-bottom-no .label-ios {
    margin: 0;
}

.border-bottom-no .label-md,
.border-bottom-no .label-ios{
    margin: 0;
}

.button[icon-only] {
    box-shadow: none;
}

.button[icon-only]:active {
    box-shadow: none;
}

.width-88{
    width: 88%;
}

.width-78{
    width: 78%;
}

.width-44vw{
    width: 44vw;
}

.bg-gray{
    border-radius: 100vw;
    border: 1px solid #E0E0E0;
    min-height: 11.8vw;
    overflow: hidden;
}

.bg-gray.item-block{
    min-height: 11.8vw;
}

.bg-gray-radius-small{
    border-radius: 20px;
    border: 1px solid #E0E0E0;
}

.bg-gray.item-ios.item-block .item-inner{
    border-bottom: 0;
}

.bg-gray-block{
    border-radius: 20px;
    background: #EAEAEA;
}

.bg-gray-block .item{
    background: transparent;
}

.bg-gray-block .item-block:last-child, .list-ios > .item-wrapper:last-child .item-block,
.bg-gray-block .item-block:first-child, .list-ios > .item-wrapper:first-child .item-block{
    border: none;
}

.bg-gray-block [item-left], .bg-gray-block [item-start], .bg-gray-block [item-right], .bg-gray-block [item-end], .bg-gray-block .item-ios ion-avatar[item-left], .bg-gray-block .item-ios ion-thumbnail[item-left], .bg-gray-block .item-ios ion-avatar[item-start], .bg-gray-block .item-ios ion-thumbnail[item-start]{
    margin: 4px;
    padding: 4px;
}

.bg-gray-block [item-start] img{
    border-radius: 0;
}

.border-bottom-gray{
    border-bottom: 1px solid #d8d8d8;
}

.label-left{
    padding: 3vw 4vw 3vw 6.3vw;
    color: map-get($colors, dark);
}

.item-md, .item-ios{
    padding-left: 0;
}
/* ... */

